--- a/index.css
+++ b/index.css
@@ -18,5 +18,5 @@
     background-image: url(image/logo-iut.jpg);
     width: 300px;
     text-align: center;
-    height: 900px;
+    height: auto;
 }
