--- a/index.css
+++ b/index.css
@@ -16,7 +16,9 @@
 
 #logo{
     background-image: url(image/logo-iut.jpg);
-    width: 300px;
-    text-align: center;
-    height: auto;
+    background-repeat: no-repeat;
+    background-size: 300px 130px;
+    width: 100%;
+    height:130px;
+    background-position: center;
 }
