--- a/index.css
+++ b/index.css
@@ -1,3 +1,20 @@
+body{
+    font-size: 1.6em;
+}
+
+h1{
+    font-size: 2.5em;
+}
+
+#logo{
+    background-image: url(image/logo-iut.jpg);
+    background-repeat: no-repeat;
+    background-size: 300px 130px;
+    width: 100%;
+    height:130px;
+    background-position: center;
+}
+
 #part1 p{
     background-color: blue;
 }
@@ -14,11 +31,3 @@
     max-width: 100%;
 }
 
-#logo{
-    background-image: url(image/logo-iut.jpg);
-    background-repeat: no-repeat;
-    background-size: 300px 130px;
-    width: 100%;
-    height:130px;
-    background-position: center;
-}
