--- a/index.css
+++ b/index.css
@@ -1,33 +1,46 @@
-body{
+body {
     font-size: 1rem;
 }
 
-h1{
+h1 {
     font-size: 8vw;
 }
 
-#logo{
+#logo {
     background-image: url(image/logo-iut.jpg);
     background-repeat: no-repeat;
     background-size: 300px 130px;
     width: 100%;
-    height:130px;
+    height: 130px;
     background-position: center;
 }
 
-#part1 p{
+#part1 p {
     background-color: blue;
 }
 
-#part2 p{
+#part2 p {
     background-color: white;
 }
 
-#part3 p{
+#part3 p {
     background-color: red;
 }
 
-#part3 img{
+#part3 img {
     max-width: 100%;
 }
 
+#form, #tableau{
+    margin-top: 20px;
+}
+
+td,
+th {
+    border: 2px solid #ccc;
+    padding: 5px;
+}
+
+th {
+    background-color: #ccc;
+}
