--- a/index.css
+++ b/index.css
@@ -31,7 +31,8 @@ h1 {
     max-width: 100%;
 }
 
-#form, #tableau{
+#form,
+#tableau {
     margin-top: 20px;
 }
 
@@ -43,4 +44,23 @@ th {
 
 th {
     background-color: #ccc;
+}
+
+@media only screen and (max-width: 480px){
+	table{
+		margin-top: 5vh;
+	    border: 2px solid #dddddd;
+
+	}
+	td{			
+		display: block;	
+		border: inherit;
+	}
+	th{
+		display: block;
+	}
+	tr{
+		text-align: center;			
+	}
+
 }
